add comment headers in notebooks for clarity and guidance

--- a/examples/duckdb_read_csv.ipynb
+++ b/examples/duckdb_read_csv.ipynb
@@ -10,6 +10,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set `duckdb` as the processing engine."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -26,6 +33,13 @@
    "outputs": [],
    "source": [
     "dg = CSVReader(csv_file, engine=engine) # set duckdb as the processing engine."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Return a sample of the CSV file to peek into the schema"
    ]
   },
   {
@@ -76,6 +90,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Return data as a Pyarrow table"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -123,6 +144,13 @@
    "source": [
     "arrow = dg.to_arrow_table()\n",
     "arrow\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Return data as a Polars dataframe. Optionally, you can convert to Pandas if you run `df = dg.to_dataframe().to_pandas()`."
    ]
   },
   {
@@ -204,6 +232,13 @@
    "source": [
     "df = dg.to_dataframe()\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Return a list of dictionaries and get the first dictionary in the list."
    ]
   },
   {
