--- a/examples/polars_read_csv.ipynb
+++ b/examples/polars_read_csv.ipynb
@@ -10,6 +10,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Polars is the default processing engine, so no need to pass the `engine` param."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -25,6 +37,13 @@
    "outputs": [],
    "source": [
     "dg = CSVReader(csv_file) # Polars is the default engine so no need to pass the engine param."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Return a sample of the CSV file to peek into the schema"
    ]
   },
   {
@@ -95,6 +114,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Return data as a Pyarrow table"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -141,7 +167,14 @@
    ],
    "source": [
     "arrow = dg.to_arrow_table()\n",
-    "arrow\n"
+    "arrow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Return data as a Polars dataframe. Optionally, you can convert to Pandas if you run `df = dg.to_dataframe().to_pandas()`."
    ]
   },
   {
@@ -223,6 +256,13 @@
    "source": [
     "df = dg.to_dataframe()\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Return a list of dictionaries and get the first dictionary in the list."
    ]
   },
   {
