fix syntax typo

--- a/examples/query_csv.ipynb
+++ b/examples/query_csv.ipynb
@@ -436,7 +436,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_query = f\"\"\"\n",
+    "df_query = \"\"\"\n",
     "WITH core AS (\n",
     "    SELECT\n",
     "        City AS city,\n",
