fix typo in example

--- a/examples/query_csv.ipynb
+++ b/examples/query_csv.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "### It's recommened to use the `duckdb` engine when querying CSV files. These query examples will work with the Polars engine exactly the same way as presented, but Datagrunt converts all data to strings when using DuckDB and it better preserves the integrity of the data due to not coercing into inferred datatypes. You'll see below that you can use SQL and you can optionally cast columns to different data types as needed.\n",
     "\n",
-    "### For example, you'll notice there are postal codes in the data below. Usually, postal codes are read as integers by most processing engines. Many postal codes begin with a `0`. If postal codes are read as an integer, the leading `0` will be dropped erroneously. This can be fixed by using the `lpad` function in Python, but we'd prefer to present the data in its original form as a string as opposed to having the data altered due to data type conversion. "
+    "### For example, you'll notice there are postal codes in the data below. Usually, postal codes are read as integers by most processing engines. Many postal codes begin with a `0`. If postal codes are read as an integer, the leading `0` will be dropped erroneously. This can be fixed by using the `zfill` function in Python, but we'd prefer to present the data in its original form as a string as opposed to having the data altered due to data type conversion. "
    ]
   },
   {
@@ -705,7 +705,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
